<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.Light.NoTitleBar"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vladislav.rea_attention.Activity.RegistrationActivity">

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108dp"
            android:text="@string/back"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/textColor"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="216dp"
            tools:layout_editor_absoluteY="388dp"
            android:layout_marginRight="13dp"
            android:layout_marginEnd="13dp"
            android:layout_above="@+id/registrationProgressBar"
            android:layout_alignRight="@+id/passwordConfirmRegistration"
            android:layout_alignEnd="@+id/passwordConfirmRegistration" />

        <TextView
            android:id="@+id/TextViewConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/passwordConfirmRegistration"
            android:layout_alignBottom="@+id/passwordConfirmRegistration"
            android:layout_alignEnd="@+id/textViewPassword"
            android:layout_alignRight="@+id/textViewPassword"
            android:text="@string/confirm_n_password"
            android:textColor="@color/textColor"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="202dp" />

        <EditText
            android:id="@+id/registrationEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/passwordRegistration"
            android:layout_alignLeft="@+id/passwordRegistration"
            android:layout_alignStart="@+id/passwordRegistration"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="90dp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/registrationEmail"
            android:layout_alignBottom="@+id/registrationEmail"
            android:layout_alignEnd="@+id/TextViewConfirmPassword"
            android:layout_alignRight="@+id/TextViewConfirmPassword"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:text="@string/email"
            android:textColor="@color/textColor"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="120dp" />

        <EditText
            android:id="@+id/passwordRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/passwordConfirmRegistration"
            android:layout_alignLeft="@+id/passwordConfirmRegistration"
            android:layout_alignStart="@+id/passwordConfirmRegistration"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="134dp" />

        <EditText
            android:id="@+id/passwordConfirmRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="176dp"
            android:layout_above="@+id/backButton"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/passwordRegistration"
            android:layout_alignBottom="@+id/passwordRegistration"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/password"
            android:textColor="@color/textColor"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="160dp" />

        <Button
            android:id="@+id/registrationButtonActivity"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/registration"
            android:textColor="@color/textColor"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="282dp"
            android:layout_below="@+id/passwordConfirmRegistration"
            android:layout_alignLeft="@+id/textViewPassword"
            android:layout_alignStart="@+id/textViewPassword" />

        <ProgressBar
            android:id="@+id/registrationProgressBar"
            style="@style/CircularProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordConfirmRegistration"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/passwordConfirmRegistration"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:visibility="invisible" />

    </RelativeLayout>
